define right endpoint
